--- a/.gitignore
+++ b/.gitignore
@@ -94,9 +94,62 @@ ENV/
 # IntelliJ project settings
 .idea/
 
-# Latex files
+
+
+## Core latex/pdflatex auxiliary files:
 *.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+
+## Intermediate documents:
+*.dvi
+*-converted-to.*
+# these rules might exclude image files for figures etc.
+# *.ps
+# *.eps
+# *.pdf
+
+## Generated if empty string is given at "Please type another file name for output:"
+bare_conf.pdf
+paper.pdf
+
+## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
+*.bcf
 *.blg
-*.pdf
+*-blx.aux
+*-blx.bib
+*.run.xml
+
+## Build tool auxiliary files:
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
 *.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
+
+## Auxiliary and intermediate files from other packages:
+# algorithms
+*.alg
+*.loa
+
+# achemso
+acs-*.bib
+
+# amsthm
+*.thm
+
+# beamer
+*.nav
+*.pre
+*.snm
+*.vrb
